# RTRT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ToDo.txt  build-debug-macos.sh  build-release-macos.sh
Assets/: BarberShopChair_01.scene  BasicRT_Scene.scene  BasicRT_Scene2.scene  Basic_Scene.scene  InfinitePlane.scene  Model Credits.txt  Sphere.scene  Sphere2.scene  Spheres.scene  TexturedBox.scene  TexturedBox_MultipleLights.scene  TexturedBoxes.scene  bedroom.scene  boy.scene  coffee_pot.scene  cornell_box_rot.scene  jinx.scene  mustang_red.scene  my_cornell_box.scene  rank3police.scene  rank3police_Stripped.scene  renderman_teapot_all.scene  renderman_teapot_chrome.scene  renderman_teapot_cloth.scene  renderman_teapot_gold.scene  renderman_teapot_red_plastic.scene  renderman_teapot_scratched.scene  renderman_teapot_teal_glass.scene  renderman_teapot_tiles.scene  teapot.scene  test_veach.scene  tropical_island.scene  tropical_island2.scene  tungsten-material-testball.scene  utah_teapot.scene
Dependencies/: CMakeLists.txt
Dependencies/RadeonRays/: bbox.cpp  bbox.h  bvh.cpp  bvh.h  split_bvh.cpp
Dependencies/glew-2.1.0/lib/Debug/Win32/: glew32d.exp  glew32d.lib  glew32sd.lib
Dependencies/glew-2.1.0/lib/Debug/x64/: glew32d.exp  glew32sd.lib
Dependencies/glew-2.1.0/lib/Release/Win32/: glew32.exp  glew32.lib  glew32s.lib
Dependencies/glew-2.1.0/lib/Release/x64/: glew32.exp  glew32s.lib
Resources/: .~lock.VertexTransform_AVX2.ods#  Stats_CPURasterizer.xlsx  VertexTransform_AVX2.ods  ViewportClipping.pptx
Shaders/: BRDF.glsl  BVH.glsl  Constants.glsl  Denoiser.glsl  DisneyBSDF.glsl  FXAA.glsl  Globals.glsl  Intersections.glsl  Lights.glsl  Material.glsl  RNG.glsl  RayTrace.glsl  Sampling.glsl  Scene.glsl  Structures.glsl  Textures.glsl  ToneMapping.glsl  compute_Denoiser.glsl  fragment.glsl  fragment_Accumulate.glsl  fragment_BasicRT.glsl  fragment_Default.glsl  fragment_DeferredGeometry.glsl  fragment_DeferredLighting.glsl  fragment_Denoiser.glsl  fragment_FantasyEscape.glsl  fragment_Intersection.glsl  fragment_Mandelbrot.glsl  fragment_Octagrams.glsl  fragment_Output.glsl  fragment_PathTracer.glsl  fragment_PathTracer.v2.glsl  fragment_PostPro.glsl  fragment_PostProcess.glsl  fragment_RTRenderer.glsl  fragment_RayMarching.glsl  fragment_ScreenSaver.glsl  fragment_Wireframe.glsl  fragment_drawWarpedTexture.glsl  fragment_drawtexture.glsl  (+3 more)
Source/: CMakeLists.txt
Source/src/: BaseTest.h  Bvh.cpp  Bvh.h  CMakeLists.txt  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  EnvMap.cpp  EnvMap.h  GLUtil.h  GpuBvh.cpp  GpuBvh.h  JobSystem.cpp  JobSystem.h  KeyInput.cpp  KeyInput.h  Light.h  Loader.cpp  Loader.h  Material.h  Math.h  MathUtil.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshInstance.h  MouseInput.cpp  MouseInput.h  Object.h  ObjectInstance.h  PathTracer.cpp  PathTracer.h  PathUtils.h  Primitive.h  PrimitiveInstance.h  QuadMesh.cpp  QuadMesh.h  RGBA8.h  (+37 more)
